--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-</head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNN34LRRQB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-TNN34LRRQB');
+    </script>
+</head>z
 <body>
     
     <div class="profile">
